...
    private var emailTextFiled: UITextField = {
        var tf = UITextField()
        tf.borderStyle = .none
        tf.font = UIFont.systemFont(ofSize: 16)
        tf.textColor = .white
        tf.keyboardAppearance = .dark
        tf.attributedPlaceholder = NSAttributedString(string: "Email", attributes: [NSAttributedString.Key.foregroundColor: UIColor.lightGray])
        
        return tf
    }()
    
    private var passwordTextField: UITextField = {
        var tf = UITextField()
...
        return tf
    }()
    
    private let loginButton: UIButton = {
       let button = UIButton()
        button.backgroundColor = .red
       button.setTitle("Login", for: .normal)
        button.addTarget(self,action: #selector(buttonClicked), for: .touchUpInside)
        return button
    }()
    
    private lazy var submitButtonContainer : UIView = {
       let view = UIView()
...
