...
     
     private let fullNameTextFiled: UITextField = {
         return UITextField().textField(withPlaceholder: "Full Name", isSecureTextEntry: false)
     }()
     
     private let passwordTextFiled: UITextField = {
         return UITextField().textField(withPlaceholder: "Password", isSecureTextEntry: true)
     }()
     
     private let accountTypeSegmentedControl: UISegmentedControl = {
         let sc = UISegmentedControl(items: ["Staff", "Student"])
        sc.backgroundColor = .purple
         sc.tintColor = UIColor(white: 1, alpha: 0.87)
...
