//
//  NIBM_COVID19UITests.swift
//  NIBM COVID19UITests
//
//  Created by Raees Samman on 8/22/20.
//  Copyright © 2020 Raees Samman. All rights reserved.
//

import XCTest

class NIBM_COVID19UITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
    func validateLoginSuccess() {
        
      let email = "Sam@gmail.com"
      let password = "Sam123"

      let app = XCUIApplication()
      app.launch()
        
        let txtEmail = app.textFields["Email"]
        XCTAssert(txtEmail.exists)
        txtEmail.tap()
        txtEmail.typeText(email)
        
        let txtPassword = app.secureTextFields["Password"]
        XCTAssert(txtPassword.exists)
        txtPassword.tap()
        txtPassword.typeText(password)
        
        let loginButton = app.buttons["Login"]
        loginButton.tap()
        
        
    }

   /* func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }*/
}
